--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
                     主題：${commonIssue}
                     教學年資：${teachingExperience}
-                    教學年段：${teaching-grade}
+                    教學年段：${teachingGrade}
                     Persona 輪廓：${personaOutline}
 
                     請根據這些資訊，建立包含以下三部分的 Persona：
